cabal-version:       2.2

name:                temu
version:             0.1.0.0
synopsis:            Retro sci-fi terminal emulator
description:         A terminal emulator recreating the aesthetics of old sci-fi movie computer displays
homepage:            https://github.com/githubuser/temu#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Terminal
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

-- Common dependencies and options
common shared
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  build-depends:       base >= 4.7 && < 5
                     -- Windowing + input
                     , sdl2 >= 2.5
                     , sdl2-ttf >= 2.1
                     -- Text handling
                     , text >= 2.0
                     , bytestring >= 0.11
                     -- Concurrency
                     , stm >= 2.5
                     , async >= 2.2
                     -- Shell process
                     , process >= 1.6
                     -- Containers
                     , vector >= 0.13
                     -- PTY and Unix
                     , unix >= 2.7
                     , posix-pty >= 0.2

library
  import:              shared
  hs-source-dirs:      src
  exposed-modules:     Temu.App
                     , Temu.Clipboard
                     , Temu.Config
                     , Temu.Input
                     , Temu.PTY
                     , Temu.Render
                     , Temu.State
                     , Temu.Terminal
                     , Temu.VTerm
  -- Link against libvterm
  pkgconfig-depends:   vterm >= 0.1
  include-dirs:        /opt/homebrew/include
  extra-lib-dirs:      /opt/homebrew/lib
  -- C helper for struct-by-value FFI calls
  c-sources:           cbits/vterm_helper.c

executable temu
  import:              shared
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       temu
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite temu-test
  import:              shared
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Temu.StateSpec
                     , Temu.InputSpec
  build-depends:       temu
                     , hspec >= 2.10
                     , QuickCheck >= 2.14
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/temu
